# dlms-llc

./: .gitignore  CMakeLists.txt  README.md  llc_codec_plan.md
docs/: 00_llc_requirements.md  01_llc_codec_api.md  02_llc_c_api.md  03_llc_segmentation_boundary.md  04_llc_test_plan.md  architecture.md
include/dlms/llc/: llc_c_api.h  llc_codec.hpp  llc_error.hpp  llc_header.hpp  llc_skeleton.hpp  llc_types.hpp
src/llc/: llc_c_api.cpp  llc_codec.cpp  llc_header.cpp  llc_skeleton.cpp
test/: CMakeLists.txt
test/llc/: test_llc_c_api.cpp  test_llc_c_header.c  test_llc_codec.cpp  test_llc_header.cpp  test_llc_skeleton.cpp  test_llc_vectors.cpp
